ass1/ttt/assignment4/src/main/d95/parser/.antlr/D95Parser.py
# Generated from f:\Documents\Dai_hoc\nam3_ki2\PPL\ass1\ttt\assignment4\src\main\d95\parser\D95.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D95Parser ( Parser ):

    grammarFileName = "D95.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'str2int'", "'int2str'", "'str2float'", 
                     "'float2str'", "'str2bool'", "'bool2str'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'break'", "'continue'", 
                     "'if'", "'elseif'", "'else'", "'while'", "'foreach'", 
                     "'as'", "'function'", "'true'", "'false'", "'array'", 
                     "'define'", "'return'", "<INVALID>", "<INVALID>", "'!='", 
                     "'>'", "'>='", "'<'", "'<='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", "'='", 
                     "'==.'", "'+.'", "'=>'", "'.'", "','", "';'", "':'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "STR2INT", "INT2STR", "STR2FLOAT", "FLOAT2STR", 
                      "STR2BOOL", "BOOL2STR", "ID_VARPAR", "ID_CONST", "ID_FUNC", 
                      "OCT", "DEC", "HEX", "BIN", "FLOAT", "BREAK", "CONTINUE", 
                      "IF", "ELSEIF", "ElSE", "WHILE", "FOREACH", "AS", 
                      "FUNCTION", "TRUE", "FALSE", "ARRAY_TYPE", "DEFINE", 
                      "RETURN", "ILLEGAL_ESCAPE", "STRING", "NOT_EQUAL", 
                      "GREATER", "GREATER_EQUAL", "LESS", "LESS_EQUAL", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", 
                      "EQUAL", "ASSIGN", "STR_CMP", "STR_CAT", "ASSOCATE", 
                      "DOT", "COMMA", "SEMI", "COLON", "LP", "RP", "LSB", 
                      "RSB", "LB", "RB", "COMMENT", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_non_constdecl = 1
    RULE_list_stmt = 2
    RULE_stmt = 3
    RULE_funcdecl = 4
    RULE_decl_param = 5
    RULE_constdecl = 6
    RULE_stmt_assign = 7
    RULE_lhs = 8
    RULE_stmt_if = 9
    RULE_stmt_elseif = 10
    RULE_stmt_else = 11
    RULE_stmt_foreach = 12
    RULE_key_for = 13
    RULE_value_for = 14
    RULE_stmt_while = 15
    RULE_stmt_break = 16
    RULE_stmt_continue = 17
    RULE_stmt_call = 18
    RULE_stmt_return = 19
    RULE_expr = 20
    RULE_expr_1 = 21
    RULE_expr_2 = 22
    RULE_expr_3 = 23
    RULE_expr_4 = 24
    RULE_expr_5 = 25
    RULE_expr_6 = 26
    RULE_expr_7 = 27
    RULE_expr_8 = 28
    RULE_operand_index = 29
    RULE_index_operator = 30
    RULE_operand = 31
    RULE_func_call = 32
    RULE_list_param = 33
    RULE_param = 34
    RULE_type_coersion = 35
    RULE_op_string = 36
    RULE_op_relation = 37
    RULE_op_andor = 38
    RULE_op_adding = 39
    RULE_op_multiplyng = 40
    RULE_listARRAY = 41
    RULE_array = 42
    RULE_i_array = 43
    RULE_a_array = 44
    RULE_m_array = 45
    RULE_listKV = 46
    RULE_keyValue = 47
    RULE_key = 48
    RULE_listLIT = 49
    RULE_literal = 50
    RULE_integer = 51
    RULE_boolean = 52

    ruleNames =  [ "program", "non_constdecl", "list_stmt", "stmt", "funcdecl", 
                   "decl_param", "constdecl", "stmt_assign", "lhs", "stmt_if", 
                   "stmt_elseif", "stmt_else", "stmt_foreach", "key_for", 
                   "value_for", "stmt_while", "stmt_break", "stmt_continue", 
                   "stmt_call", "stmt_return", "expr", "expr_1", "expr_2", 
                   "expr_3", "expr_4", "expr_5", "expr_6", "expr_7", "expr_8", 
                   "operand_index", "index_operator", "operand", "func_call", 
                   "list_param", "param", "type_coersion", "op_string", 
                   "op_relation", "op_andor", "op_adding", "op_multiplyng", 
                   "listARRAY", "array", "i_array", "a_array", "m_array", 
                   "listKV", "keyValue", "key", "listLIT", "literal", "integer", 
                   "boolean" ]

    EOF = Token.EOF
    STR2INT=1
    INT2STR=2
    STR2FLOAT=3
    FLOAT2STR=4
    STR2BOOL=5
    BOOL2STR=6
    ID_VARPAR=7
    ID_CONST=8
    ID_FUNC=9
    OCT=10
    DEC=11
    HEX=12
    BIN=13
    FLOAT=14
    BREAK=15
    CONTINUE=16
    IF=17
    ELSEIF=18
    ElSE=19
    WHILE=20
    FOREACH=21
    AS=22
    FUNCTION=23
    TRUE=24
    FALSE=25
    ARRAY_TYPE=26
    DEFINE=27
    RETURN=28
    ILLEGAL_ESCAPE=29
    STRING=30
    NOT_EQUAL=31
    GREATER=32
    GREATER_EQUAL=33
    LESS=34
    LESS_EQUAL=35
    ADD=36
    SUB=37
    MUL=38
    DIV=39
    MOD=40
    NOT=41
    AND=42
    OR=43
    EQUAL=44
    ASSIGN=45
    STR_CMP=46
    STR_CAT=47
    ASSOCATE=48
    DOT=49
    COMMA=50
    SEMI=51
    COLON=52
    LP=53
    RP=54
    LSB=55
    RSB=56
    LB=57
    RB=58
    COMMENT=59
    WS=60
    ERROR_CHAR=61
    UNCLOSE_STRING=62
    UNTERMINATED_COMMENT=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D95Parser.EOF, 0)

        def non_constdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D95Parser.Non_constdeclContext)
            else:
                return self.getTypedRuleContext(D95Parser.Non_constdeclContext,i)


        def constdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D95Parser.ConstdeclContext)
            else:
                return self.getTypedRuleContext(D95Parser.ConstdeclContext,i)


        def getRuleIndex(self):
            return D95Parser.RULE_program




    def program(self):

        localctx = D95Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D95Parser.STR2INT) | (1 << D95Parser.INT2STR) | (1 << D95Parser.STR2FLOAT) | (1 << D95Parser.FLOAT2STR) | (1 << D95Parser.STR2BOOL) | (1 << D95Parser.BOOL2STR) | (1 << D95Parser.ID_VARPAR) | (1 << D95Parser.ID_CONST) | (1 << D95Parser.ID_FUNC) | (1 << D95Parser.OCT) | (1 << D95Parser.DEC) | (1 << D95Parser.HEX) | (1 << D95Parser.BIN) | (1 << D95Parser.FLOAT) | (1 << D95Parser.FUNCTION) | (1 << D95Parser.TRUE) | (1 << D95Parser.FALSE) | (1 << D95Parser.DEFINE) | (1 << D95Parser.STRING) | (1 << D95Parser.LP))) != 0):
                self.state = 108
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [D95Parser.STR2INT, D95Parser.INT2STR, D95Parser.STR2FLOAT, D95Parser.FLOAT2STR, D95Parser.STR2BOOL, D95Parser.BOOL2STR, D95Parser.ID_VARPAR, D95Parser.ID_CONST, D95Parser.ID_FUNC, D95Parser.OCT, D95Parser.DEC, D95Parser.HEX, D95Parser.BIN, D95Parser.FLOAT, D95Parser.FUNCTION, D95Parser.TRUE, D95Parser.FALSE, D95Parser.STRING, D95Parser.LP]:
                    self.state = 106
                    self.non_constdecl()
                    pass
                elif token in [D95Parser.DEFINE]:
                    self.state = 107
                    self.constdecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(D95Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_constdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_assign(self):
            return self.getTypedRuleContext(D95Parser.Stmt_assignContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(D95Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_non_constdecl




    def non_constdecl(self):

        localctx = D95Parser.Non_constdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_non_constdecl)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D95Parser.STR2INT, D95Parser.INT2STR, D95Parser.STR2FLOAT, D95Parser.FLOAT2STR, D95Parser.STR2BOOL, D95Parser.BOOL2STR, D95Parser.ID_VARPAR, D95Parser.ID_CONST, D95Parser.ID_FUNC, D95Parser.OCT, D95Parser.DEC, D95Parser.HEX, D95Parser.BIN, D95Parser.FLOAT, D95Parser.TRUE, D95Parser.FALSE, D95Parser.STRING, D95Parser.LP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.stmt_assign()
                pass
            elif token in [D95Parser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.funcdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(D95Parser.StmtContext,0)


        def list_stmt(self):
            return self.getTypedRuleContext(D95Parser.List_stmtContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_list_stmt




    def list_stmt(self):

        localctx = D95Parser.List_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_list_stmt)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D95Parser.STR2INT, D95Parser.INT2STR, D95Parser.STR2FLOAT, D95Parser.FLOAT2STR, D95Parser.STR2BOOL, D95Parser.BOOL2STR, D95Parser.ID_VARPAR, D95Parser.ID_CONST, D95Parser.ID_FUNC, D95Parser.OCT, D95Parser.DEC, D95Parser.HEX, D95Parser.BIN, D95Parser.FLOAT, D95Parser.BREAK, D95Parser.CONTINUE, D95Parser.IF, D95Parser.WHILE, D95Parser.FOREACH, D95Parser.TRUE, D95Parser.FALSE, D95Parser.RETURN, D95Parser.STRING, D95Parser.LP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.stmt()
                self.state = 120
                self.list_stmt()
                pass
            elif token in [D95Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_if(self):
            return self.getTypedRuleContext(D95Parser.Stmt_ifContext,0)


        def stmt_assign(self):
            return self.getTypedRuleContext(D95Parser.Stmt_assignContext,0)


        def stmt_foreach(self):
            return self.getTypedRuleContext(D95Parser.Stmt_foreachContext,0)


        def stmt_while(self):
            return self.getTypedRuleContext(D95Parser.Stmt_whileContext,0)


        def stmt_break(self):
            return self.getTypedRuleContext(D95Parser.Stmt_breakContext,0)


        def stmt_continue(self):
            return self.getTypedRuleContext(D95Parser.Stmt_continueContext,0)


        def stmt_call(self):
            return self.getTypedRuleContext(D95Parser.Stmt_callContext,0)


        def stmt_return(self):
            return self.getTypedRuleContext(D95Parser.Stmt_returnContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_stmt




    def stmt(self):

        localctx = D95Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.stmt_if()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.stmt_assign()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.stmt_foreach()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.stmt_while()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.stmt_break()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 130
                self.stmt_continue()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 131
                self.stmt_call()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 132
                self.stmt_return()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(D95Parser.FUNCTION, 0)

        def ID_FUNC(self):
            return self.getToken(D95Parser.ID_FUNC, 0)

        def LP(self):
            return self.getToken(D95Parser.LP, 0)

        def decl_param(self):
            return self.getTypedRuleContext(D95Parser.Decl_paramContext,0)


        def RP(self):
            return self.getToken(D95Parser.RP, 0)

        def LB(self):
            return self.getToken(D95Parser.LB, 0)

        def list_stmt(self):
            return self.getTypedRuleContext(D95Parser.List_stmtContext,0)


        def RB(self):
            return self.getToken(D95Parser.RB, 0)

        def getRuleIndex(self):
            return D95Parser.RULE_funcdecl




    def funcdecl(self):

        localctx = D95Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(D95Parser.FUNCTION)
            self.state = 136
            self.match(D95Parser.ID_FUNC)
            self.state = 137
            self.match(D95Parser.LP)
            self.state = 138
            self.decl_param()
            self.state = 139
            self.match(D95Parser.RP)
            self.state = 140
            self.match(D95Parser.LB)
            self.state = 141
            self.list_stmt()
            self.state = 142
            self.match(D95Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_paramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_VARPAR(self):
            return self.getToken(D95Parser.ID_VARPAR, 0)

        def COMMA(self):
            return self.getToken(D95Parser.COMMA, 0)

        def decl_param(self):
            return self.getTypedRuleContext(D95Parser.Decl_paramContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_decl_param




    def decl_param(self):

        localctx = D95Parser.Decl_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_decl_param)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.match(D95Parser.ID_VARPAR)
                self.state = 145
                self.match(D95Parser.COMMA)
                self.state = 146
                self.decl_param()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(D95Parser.ID_VARPAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE(self):
            return self.getToken(D95Parser.DEFINE, 0)

        def LP(self):
            return self.getToken(D95Parser.LP, 0)

        def ID_CONST(self):
            return self.getToken(D95Parser.ID_CONST, 0)

        def COMMA(self):
            return self.getToken(D95Parser.COMMA, 0)

        def expr(self):
            return self.getTypedRuleContext(D95Parser.ExprContext,0)


        def RP(self):
            return self.getToken(D95Parser.RP, 0)

        def SEMI(self):
            return self.getToken(D95Parser.SEMI, 0)

        def getRuleIndex(self):
            return D95Parser.RULE_constdecl




    def constdecl(self):

        localctx = D95Parser.ConstdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(D95Parser.DEFINE)
            self.state = 152
            self.match(D95Parser.LP)
            self.state = 153
            self.match(D95Parser.ID_CONST)
            self.state = 154
            self.match(D95Parser.COMMA)
            self.state = 155
            self.expr()
            self.state = 156
            self.match(D95Parser.RP)
            self.state = 157
            self.match(D95Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_assignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lhs(self):
            return self.getTypedRuleContext(D95Parser.LhsContext,0)


        def ASSIGN(self):
            return self.getToken(D95Parser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(D95Parser.ExprContext,0)


        def SEMI(self):
            return self.getToken(D95Parser.SEMI, 0)

        def getRuleIndex(self):
            return D95Parser.RULE_stmt_assign




    def stmt_assign(self):

        localctx = D95Parser.Stmt_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.lhs()
            self.state = 160
            self.match(D95Parser.ASSIGN)
            self.state = 161
            self.expr()
            self.state = 162
            self.match(D95Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LhsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_VARPAR(self):
            return self.getToken(D95Parser.ID_VARPAR, 0)

        def expr_8(self):
            return self.getTypedRuleContext(D95Parser.Expr_8Context,0)


        def getRuleIndex(self):
            return D95Parser.RULE_lhs




    def lhs(self):

        localctx = D95Parser.LhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_lhs)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(D95Parser.ID_VARPAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.expr_8()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_ifContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(D95Parser.IF, 0)

        def LP(self):
            return self.getToken(D95Parser.LP, 0)

        def expr(self):
            return self.getTypedRuleContext(D95Parser.ExprContext,0)


        def RP(self):
            return self.getToken(D95Parser.RP, 0)

        def LB(self):
            return self.getToken(D95Parser.LB, 0)

        def list_stmt(self):
            return self.getTypedRuleContext(D95Parser.List_stmtContext,0)


        def RB(self):
            return self.getToken(D95Parser.RB, 0)

        def stmt_elseif(self):
            return self.getTypedRuleContext(D95Parser.Stmt_elseifContext,0)


        def stmt_else(self):
            return self.getTypedRuleContext(D95Parser.Stmt_elseContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_stmt_if




    def stmt_if(self):

        localctx = D95Parser.Stmt_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(D95Parser.IF)
            self.state = 169
            self.match(D95Parser.LP)
            self.state = 170
            self.expr()
            self.state = 171
            self.match(D95Parser.RP)
            self.state = 172
            self.match(D95Parser.LB)
            self.state = 173
            self.list_stmt()
            self.state = 174
            self.match(D95Parser.RB)
            self.state = 175
            self.stmt_elseif()
            self.state = 176
            self.stmt_else()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_elseifContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSEIF(self):
            return self.getToken(D95Parser.ELSEIF, 0)

        def LP(self):
            return self.getToken(D95Parser.LP, 0)

        def expr(self):
            return self.getTypedRuleContext(D95Parser.ExprContext,0)


        def RP(self):
            return self.getToken(D95Parser.RP, 0)

        def LB(self):
            return self.getToken(D95Parser.LB, 0)

        def list_stmt(self):
            return self.getTypedRuleContext(D95Parser.List_stmtContext,0)


        def RB(self):
            return self.getToken(D95Parser.RB, 0)

        def stmt_elseif(self):
            return self.getTypedRuleContext(D95Parser.Stmt_elseifContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_stmt_elseif




    def stmt_elseif(self):
